# practice-code

./: .gitignore  README.org  lc1684.cpp
C++/: C++_refrence  arrays  arrays2  break_continue  c++_constructor  c++_input  c++_input.cpp  call_by  call_by.cpp  clean_up.py  clean_up_v2.py  cons_manu_prece  cons_manu_prece.cpp  copy_constructor  destructor  destructor.cpp  dynamic_init_constructor  friends_functions.cpp  funcs  if_else  loops_cpp  main  main.cpp  more_with_func  object_array.cpp  oop2  oop4  oop4.cpp  oop_cpp  opp3  opp3.cpp  overflow  overflow.cpp  pointers_cpp  pointers_cpp.cpp  prac  practice_set10.c  practice_set3.c  practice_set6.c  practice_set7.c  (+17 more)
CGMM_LAB/: bresenhamLineAlgo  bresenhamLineAlgo.cpp  dda  dda.cpp  sample.c
C_and_C++/: 3_Infectious_Letters.cpp  B_Worms.cpp  C++_refrence.cpp  arrays_pointers  arrays_pointers.c  break_continue.cpp  c++_constructor.cpp  clean_up_v2.py  codeblocks  codeblocks.c  contest  contest.cpp  copy_constructor.cpp  dynamic_memory_alloc  dynamic_memory_alloc.c  files_in_c  files_in_c.c  graphics_demo  graphics_h  if_else.cpp  lc1310  lc1310.cpp  lc645  lc645.cpp  loops_cpp.cpp  more_with_func.cpp  nestingInVector.cpp  oop2.cpp  prac.cpp  string_c  string_c.c  string_cpp.cpp  sublime  temp2  temp2.c++  tempCodeRunnerFile.cpp  test.cpp  tmp  tmp2  tmp2.c
DS_LAB/: 27dec_Q1  27dec_Q2  27dec_Q3  27dec_Q3.c  27dec_Q4  27dec_Q4.c  27dec_Q5  27dec_Q5.c  Jan10  Jan10.c  Jan17  Jan17.c  Soln4  Soln4.c  assignment1  assignment1Q4  assignment1Q4.c  assignment1Q5  assignment1Q5.c  assignment1Q6  assignment1Q6.c  binary_search  binary_search.c  bst  bst.c  circularLinkedList  circularLinkedList.c  feb11  feb11.c  feb3  feb3.c  jan17  jan17.c  jan24  jan24.c  jan24_queue  jan24_queue.c  jan24_stack  jan24_stack.c  linear_search  (+17 more)
Haskell/ch13_BuildingProjects/hello/: hello.cabal
Haskell/ch13_BuildingProjects/hello/exe/: Main.hs
Haskell/ch13_BuildingProjects/hello/src/: DogsRule.hs  Hello.hs
assigments_and_interview/phdAdmission/: .gitignore  extracted_data.csv  pyproject.toml  requirements.txt  solution1.ipynb  solution2.ipynb  solution3.ipynb  solution4.ipynb  tmp.py  ycombinator_news.csv
python/flet_learning/: main.py  pyproject.toml
python/flet_learning/flet_android_app/: .gitignore  README.md  flake.nix  flake_org.nix  main.py  pyproject.toml  shell.nix  tmp.txt
python/scrapy_demo/: pyproject.toml
python/scrapy_demo/bookscraper/: .gitignore  books.csv  books.json  booksdata.csv  booksdata.json
python/scrapy_demo/bookscraper/bookscraper/: items.py  middlewares.py  pipelines.py  settings.py
python/scrapy_demo/bookscraper/bookscraper/spiders/: bookspider.py
python/scrapy_demo/booksworm/: pyproject.toml  scrapy.cfg
python/scrapy_demo/booksworm/booksworm/: items.py  middlewares.py  pipelines.py  settings.py
(+1265 files in other folders)
