[tool.poetry]
name = "scrapy-demo"
version = "0.1.0"
description = ""
authors = ["Rohit <RohitSinghEmail@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"
ipython = "^8.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
