[tool.poetry]
name = "flet-android-app"
version = "0.1.0"
description = ""
authors = ["Rohit Singh <RohitSinghEmail@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
